Added the remaining pycache and checkpoints to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 /Scripts/__pycache__/*
+/Scripts/__pycache__/
 /Scripts/Dobot/__pycache__/*
+/Scripts/Dobot/__pycache__/
 /Calibrations/*
+/Scripts/.ipynb_checkpoints/*
+/Scripts/.ipynb_checkpoints/
