Updated movement and scale reading

--- a/Scripts/default_settings.json
+++ b/Scripts/default_settings.json
@@ -1,7 +1,8 @@
 {
-  "base_path":"C:/Users/conar/repos/printing-platform/",
+  "base_path":"C:/Users/tanla/printing-platform/",
   "Dobot_port": "COM3",
   "Arduino_port":"COM6",
+  "Scale_port":"COM7",
   "robot_type":"M1",
   "plate_type": "shallow-384_well_plate",
   "default_dispenser":"droplet",
@@ -12,19 +13,21 @@
       "pulse_pressure":2,
       "refuel_width":47000,
       "pulse_width":3000,
-      "test_droplet_count":5,
+      "test_droplet_count_low":5,
+      "test_droplet_count_high":15,
       "frequency":20,
-      "height":150,
+      "height":225,
       "max_volume":200,
       "min_volume":20,
       "target_disp_volume":0.06
     },
     "p1000":{
-      "refuel_pressure":-2,
+      "refuel_pressure":-5,
       "pulse_pressure":1.1,
       "refuel_width":3000,
       "pulse_width":3000,
-      "test_droplet_count":1,
+      "test_droplet_count_low":1,
+      "test_droplet_count_high":5,
       "frequency":5,
       "height":225,
       "max_volume":1000,
